--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,9 @@
 
 html,
 body {
+    min-height: 100%;
+}
+html{
     height: 100%;
 }
 
@@ -19,9 +22,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-*{
-    white-space: pre-line;
-}
+
 
 p {
     font-size: large;
